src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__acl_item_grantor.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"aclitem_grantor\")]\nfn acl_item_grantor(acl_item: AclItem) -> Oid {\n    acl_item.grantor\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct AclItemGrantor;
impl crate::func::EagerUnaryFunc for AclItemGrantor {
    type Input<'a> = AclItem;
    type Output<'a> = Oid;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        acl_item_grantor(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for AclItemGrantor {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("aclitem_grantor")
    }
}
fn acl_item_grantor(acl_item: AclItem) -> Oid {
    acl_item.grantor
}
