src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__acl_item_privileges.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"aclitem_privileges\")]\nfn acl_item_privileges(acl_item: AclItem) -> String {\n    acl_item.acl_mode.to_string()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct AclItemPrivileges;
impl crate::func::EagerUnaryFunc for AclItemPrivileges {
    type Input<'a> = AclItem;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        acl_item_privileges(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for AclItemPrivileges {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("aclitem_privileges")
    }
}
fn acl_item_privileges(acl_item: AclItem) -> String {
    acl_item.acl_mode.to_string()
}
