src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_acl_item__mz_acl_item_grantee.snap
---
source: src/expr/src/scalar/func/impls/mz_acl_item.rs
expression: "#[sqlfunc(sqlname = \"mz_aclitem_grantee\")]\nfn mz_acl_item_grantee(mz_acl_item: MzAclItem) -> String {\n    mz_acl_item.grantee.to_string()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct MzAclItemGrantee;
impl crate::func::EagerUnaryFunc for MzAclItemGrantee {
    type Input<'a> = MzAclItem;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_acl_item_grantee(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzAclItemGrantee {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_aclitem_grantee")
    }
}
fn mz_acl_item_grantee(mz_acl_item: MzAclItem) -> String {
    mz_acl_item.grantee.to_string()
}
